# acts_ml_navigator

./: .clang-format  .gitignore  CMakeLists.txt  MyPropagationAlgorithm.hpp  README.md  SurfaceLogger.hpp  convert_keras_to_onnx.py  custom.py  main.cpp  model.py  run.sh  run_navigation.sh  test_all.sh
cmake/: compiler_warnings.cmake
data/: event000000000-detectors-full-barrel.csv  event000000000-detectors-pixel-barrel.csv  event000000000-detectors-pixel-detector.csv
data/detector/: detector_surfaces.csv
data/detector/3d_models/: generic_detector.mlp
graph_size_analyzer/: graph_size_analyzer.sh  print_graph_info.py
logger/: CMakeLists.txt  MyPropagationAlgorithm.hpp  RadiusAborter.hpp  SurfaceLogger.hpp  logger.cpp  run_logger.sh
models/: .navigator.py.kate-swp  WIP_target_pred_navigator_self.py  embedding_model.py  embedding_plot.py  export_embedding.py  feedforward_navigator.py  model_optimization.py  navigator.py  pairwise_score_navigator_pre.py  pairwise_score_navigator_self.py  plot_embedding.py  plots_for_paper.py  pretrain_embedding.py  recurrent_navigator.py  target_pred_navigator.py  target_pred_navigator_pre.py  tests.py  weighted_graph_navigator.py
models/common/: config.py  evaluation.py  misc.py  pairwise_score_tools.py  plot_embedding.py  plotting.py  preprocessing.py  real_space_embedding.py
models/tests/: compare_knn_ann.py  evolutionary_optimization.py  generator_benchmark.py  nearest_neighbors_with_tf.py
models/utility/: data_import.py  plotting.py
navigator/: CMakeLists.txt  MLNavigator.hpp  OnnxModel.hpp  csv.hpp  main.cpp
utilities/geo_id_decoder/: CMakeLists.txt  geo_id_decoder.cpp
utilities/interactive_track_viewer/: InteractiveTrackViewer.cpp  InteractiveTrackViewer.hpp  SeriesSelectDialog.cpp  SeriesSelectDialog.hpp  TrackListWidgetItem.hpp  csv.hpp  main.cpp  typedefs.hpp
utilities/kd_tree/: CMakeLists.txt  kd_tree.hpp  main.cpp
utilities/volume_name_extractor/: CMakeLists.txt  volume_name_extractor.cpp
